# monitor

./: .gitignore  app_insights_logger.py  main.py  pyproject.toml  requirements.txt  startup.py  web.config
