[build-system]
requires = ["setuptools>=40.8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastapi-azure-app"
version = "1.0.0"
description = "FastAPI application for Azure App Service"
requires-python = ">=3.13"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.25.0",
    "gunicorn==22.0.0",
    "pydantic==2.9.2",
    "typing-extensions==4.12.2",
    "setuptools>=75.1.0",
    "azure-monitor-opentelemetry==1.6.0",
    "requests==2.32.3",
    "wheel==0.44.0"
]